--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,11 @@
             <input type="text" name="q" placeholder="Wrocław, Rynek" />
         </header>
 
+        <div id="socials">
+            <a class="facebook" href="https://www.facebook.com/ProPsy.Co/">Facebook</a>
+            <a class="instagram" href="https://www.instagram.com/propsy.dog/">Instagram</a>
+        </div>
+
         {{{ body }}}
 
         <script src="//maps.googleapis.com/maps/api/js?language=pl&libraries=places"></script>
