Add proper inital center, improve tooltip layout, add clusters

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,6 +44,8 @@
         <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
         <!-- build:js(assets) bower_components/handlebars/handlebars.min.js -->
         <script type="text/javascript" src="bower_components/handlebars/handlebars.min.js"></script>
+        <!-- build:js(assets) bower_components/js-marker-clusterer/src/markerclusterer_compiled.js -->
+        <script type="text/javascript" src="bower_components/js-marker-clusterer/src/markerclusterer_compiled.js"></script>
         <!-- build:js(assets) scripts/map.js -->
         <script type="text/javascript" src="scripts/map.js"></script>
         <!-- endbuild -->
