--- a/assets/styles/sass/ui/_header.sass
+++ b/assets/styles/sass/ui/_header.sass
@@ -13,6 +13,10 @@ header#page-header
 
     #logo
         display: block
+        padding: 10px 0
+
+        img
+            height: 70px
 
     input[type="text"]
         display: block
