--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,12 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link rel="icon" type="image/png" href="/favicon.png">
+        <link rel="icon" type="image/png" href="/favicon-256x256.png" sizes="256x256">
+        <link rel="apple-touch-icon" href="/touch-icon-iphone.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/touch-icon-ipad.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/touch-icon-iphone-retina.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/touch-icon-ipad-retina.png">
         <!-- build:css(assets) styles/screen.css -->
         <link rel="stylesheet" href="styles/screen.css">
         <!-- endbuild -->
