--- a/assets/styles/sass/_vars.scss
+++ b/assets/styles/sass/_vars.scss
@@ -11,7 +11,7 @@
 */
 
 /**
- * Any variables you find set in inuit.css’ `_vars.scss` that you do not wish to
+ * Any variables you find set in inuit.css `_vars.scss` that you do not wish to
  * keep, simply redefine here. This means that if inuit.css, for example, sets
  * your `$base-font-size` at 16px and you wish it to be 14px, simply redeclare
  * that variable in this file. inuit.css ignores its own variables in favour of
@@ -27,7 +27,7 @@
     $OBJECTS-AND-ABSTRACTIONS
 \*------------------------------------*/
 /**
- * All of inuit.css’ objects and abstractions are initially turned off by
+ * All of inuit.css objects and abstractions are initially turned off by
  * default. This means that you start any project with as little as possible,
  * and introducing objects and abstractions is as simple as switching the
  * following variables to `true`.
@@ -65,14 +65,14 @@ $use-greybox:       false;
     $OVERRIDES
 \*------------------------------------*/
 /**
- * Place any variables that should override inuit.css’ defaults here.
+ * Place any variables that should override inuit.css defaults here.
  */
 $debug-mode:            false;
 
 $responsive:            true;
 
 $brand-color:           #D70014;
-$brand-face:            'Lato', sans-serif;
+$brand-face:            'Pluto', sans-serif;
 
 $base-font-family:      $brand-face;
 
