--- a/assets/styles/sass/ui/_header.sass
+++ b/assets/styles/sass/ui/_header.sass
@@ -1,51 +1,8 @@
-header#page-header
-    z-index: 900
-    position: fixed
-    top: 15px
-    left: 10px
-    right: 10px
-    padding: 0 20px
-    text-align: center
-    background: white
-    -webkit-border-radius: 8px
-    -moz-border-radius: 8px
-    border-radius: 8px
-
-    #logo
-        display: block
-        padding: 10px 0
-
-        img
-            height: 70px
-
-    input[type="text"]
-        display: block
-        width: 100%
-        height: 36px
-        padding: 0 10px
-        margin: 0 0 20px
-        line-height: 30px
-        border: solid 1px #ccc
-        -webkit-border-radius: 5px
-        -moz-border-radius: 5px
-        border-radius: 5px
-        -webkit-box-sizing: border-box
-        -moz-box-sizing: border-box
-        box-sizing: border-box
-        font-weight: bold
-        text-align: center
-        font-size: 1.4rem
-
-    @media (min-width: 640px)
-        left: 50%
-        width: 600px
-        margin: 0 0 0 -300px
-
 #socials
     z-index: 950
     position: absolute
-    top: 25px
-    right: 30px
+    right: 52px
+    bottom: 21px
 
     a
         display: inline-block
@@ -60,10 +17,3 @@ header#page-header
 
     a.instagram
         background: url(../images/instagram.png) no-repeat
-
-    @media (min-width: 640px)
-        top: 15px
-        right: 10px
-
-        a
-            display: block
