--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,6 +43,8 @@
 
                 <div class="search-results"></div>
             </div>
+
+            <a href="#" class="toggle"></a>
         </aside>
 
         <div id="socials">
