Add search suggestions

--- a/assets/styles/sass/_vars.scss
+++ b/assets/styles/sass/_vars.scss
@@ -71,7 +71,7 @@ $debug-mode:            false;
 
 $responsive:            true;
 
-$brand-color:           #D70014;
+$brand-color:           #626364;
 $brand-face:            'Pluto', sans-serif;
 
 $base-font-family:      $brand-face;
