--- a/assets/styles/sass/ui/_typography.scss
+++ b/assets/styles/sass/ui/_typography.scss
@@ -104,7 +104,7 @@ a{
     // @include transition (color .2s ease-in);  // You can use this if Bourbon is installed
     color: $gray6;
 
-    &:hover{ color: $brand-color; }
+    &:hover, &:focus{ color: $brand-color; text-decoration: none; }
 }
 
 
