Add travis integration, modify directory structure, add tests

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -57,17 +57,8 @@
         <script src="//maps.googleapis.com/maps/api/js?language=pl&libraries=places"></script>
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <!-- build:js(assets) underscore/underscore-min.js -->
-        <script type="text/javascript" src="underscore/underscore-min.js"></script>
-        <!-- build:js(assets) handlebars/handlebars.min.js -->
-        <script type="text/javascript" src="handlebars/handlebars.min.js"></script>
-        <!-- build:js(assets) js-marker-clusterer/src/markerclusterer_compiled.js -->
-        <script type="text/javascript" src="js-marker-clusterer/src/markerclusterer.js"></script>
-        <!-- build:js(assets) scripts/map.js -->
-        <script type="text/javascript" src="scripts/map.js"></script>
-        <!-- endbuild -->
-        <!-- build:js(assets) scripts/scripts.js -->
-        <script type="text/javascript" src="scripts/scripts.js"></script>
+        <!-- build:js(assets) scripts/app.js -->
+        <script type="text/javascript" src="scripts/app.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
