Add api key to google maps script

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -54,7 +54,7 @@
 
         {{{ body }}}
 
-        <script src="//maps.googleapis.com/maps/api/js?language=pl&libraries=places"></script>
+        <script src="//maps.googleapis.com/maps/api/js?key={{googleApiKey}}&language=pl&libraries=places"></script>
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <!-- build:js(assets) scripts/app.js -->
