Add place type filtering feature
refs #1

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -42,6 +42,68 @@
                 </div>
 
                 <ul class="search-results"></ul>
+
+                <ul class="search-filters">
+                    <li>
+                        <div class="pretty p-default">
+                            <input type="checkbox" name="filter" value="restaurant" checked="checked" />
+                            <div class="state">
+                                <label>
+                                    <span class="icon">
+                                        <!-- build:js(assets) images/icon-restaurant.png -->
+                                        <image src="images/icon-restaurant.png">
+                                        <!-- endbuild -->
+                                    </span>
+                                    restauracje
+                                </label>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="pretty p-default">
+                            <input type="checkbox" name="filter" value="hotel" checked="checked" />
+                            <div class="state">
+                                <label>
+                                    <span class="icon">
+                                        <!-- build:js(assets) images/icon-hotel.png -->
+                                        <image src="images/icon-hotel.png">
+                                        <!-- endbuild -->
+                                    </span>
+                                    hotele
+                                </label>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="pretty p-default">
+                            <input type="checkbox" name="filter" value="shop" checked="checked" />
+                            <div class="state">
+                                <label>
+                                    <span class="icon">
+                                        <!-- build:js(assets) images/icon-sho.png -->
+                                        <image src="images/icon-shop.png">
+                                        <!-- endbuild -->
+                                    </span>
+                                    sklepy
+                                </label>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="pretty p-default">
+                            <input type="checkbox" name="filter" value="other" checked="checked" />
+                            <div class="state">
+                                <label>
+                                    <span class="icon">
+                                        <!-- build:js(assets) images/icon-other.png -->
+                                        <image src="images/icon-other.png">
+                                    </span>
+                                    inne
+                                </label>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
 
             <a href="#" class="toggle"></a>
